fixed issue #7 regarding the recruit search page

--- a/RecruitSearch.html
+++ b/RecruitSearch.html
@@ -50,12 +50,11 @@
 		<div class="col-md-1"></div>
 		<div class="col-md-10">
 			<h4><a href="/back"><i class="fa fa-angle-left"></i> BACK</a></h4>
-			<br>
-			<div style="margin-left: 20px" >
-				<h1>Recruit</h1>
-				<h3>Search for potential participants to send flyer about studies.</h3>
+			<h1>Recruit</h1>
+			<h3>Search for potential participants to send flyer about studies.</h3>
+			<div>
 				<div class="row" style="margin-top: 50px;">
-					<div class="col-xs-4 col-md-2">
+					<div class="col-xs-5 col-md-4">
 						<form class="form-horizontal">
 							<div class="row">
 								<h5 class="first">Age (Years)</h5>
@@ -132,8 +131,8 @@
 										<p class="pull-right"><input type="checkbox" id="asianEth" name="asian" /></p>
 									</div>
 									<div class="checkbox">
-										<label for="hispanicEth" class="pull-left"><span>Native Hawaiian or Pacific Islander</span></label>
-										<p class="pull-right"><input type="checkbox" id="hispanicEth" name="hispanic" /></p>
+										<label for="pacificEth" class="pull-left"><span>Native Hawaiian or Pacific Islander</span></label>
+										<p class="pull-right"><input type="checkbox" id="pacificEth" name="pacific" /></p>
 									</div>
 									<div class="checkbox">
 										<label for="whiteEth" class="pull-left"><span>White</span></label>
@@ -193,9 +192,9 @@
 							<button type="submit" class="fit btn btn-lg" style="margin-top: 50px;">Search</button>
 						</form>
 					</div>
-					<div id="result" class="col-xs-8 col-md-10 row" style="text-align: center; font-size: 14px;">
+					<div id="result" class="col-xs-7 col-md-8 row" style="text-align: center; font-size: 14px;">
 						<div class="col-md-1"></div>
-						<div class="col-md-10">
+						<div class="col-md-11">
 							<table class="table table-hover ">
 								<tr>
 									<td class="bg-primary">ID</td>
@@ -308,15 +307,11 @@
 									<td><input type="checkbox" name=""></td>
 								</tr>
 							</table>
-						</div>
-						<div class="col-md-1"></div>
-						<div class="row">
-							<div class="col-md-10"></div>
-							<div class="col-md-1">
-								<button type="submit" class="btn fit btn-lg" style="margin-top: 100px;">Next</button>	
+							<div>
+								<button type="submit" class="btn fit btn-lg pull-right" style="margin-top: 100px;">Next</button>
 							</div>
-							<div class="col-md-1"></div>
 						</div>
+						<br>
 					</div>
 				</div>
 			</div>
@@ -325,4 +320,4 @@
 	</div>
 	<br><br>
 </body>
-</html>+
+</html>
