--- a/Register33.html
+++ b/Register33.html
@@ -7,15 +7,15 @@
             </head>
     <body>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row"><br><br>
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
                     <h2>Register</h2>
-                    </br>
+                    <br>
                     <div class="row">
                     <div class="text-center">
                         <p>Why do you want to register with the AJ Drexel Autism Institute?</p>
-                        </br>
+                        <br>
                     </div>
                         <div class="col-md-4"></div>
                         <div class="col-md-4">
@@ -24,7 +24,7 @@
                                  <p><input type="checkbox" id="checkbox2"> Receive Updates and News on the Institute</p>
                              </form>
                             <div class="text-center">
-                                </br>
+                                <br>
                             <button class="btn btn-primary target" type="submit">NEXT</button>
                             </div>
                         </div>
