--- a/Register55.html
+++ b/Register55.html
@@ -6,10 +6,18 @@
         	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h2>Register</h2><br>
-        <div class="text-center">
-            <p>YOUR DATA WAS SUCCESSFULLY SUBMITTED!</p>
-            <button class="btn btn-primary target" type="submit">FINISH</button>
+        <div class="container-fluid">
+            <div class="row"><br><br>
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <h2>Register</h2>
+                    <div class="text-center">
+                    <p>YOUR DATA WAS SUCCESSFULLY SUBMITTED!</p>
+                    <button class="btn btn-primary target" type="submit">FINISH</button>
+                    </div>
+                </div>
+                <div class="col-md-1"></div>
+            </div>
         </div>
     </body>
 </html>
