--- a/Register22.html
+++ b/Register22.html
@@ -7,7 +7,7 @@
             </head>
     <body>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row"><br><br>
                 <div class="col-md-1"></div>
                  <div class="col-md-10">
                      <h2>Register</h2>
