Updated Register Diagnosis-1 and cleared the issues

--- a/Register Diagnosis-1.html
+++ b/Register Diagnosis-1.html
@@ -118,24 +118,25 @@
 		<br>
 		<div id="options" class="row">
 			<div class="col-md-6">PLEASE LIST OTHER DIAGNOSIS</div>
-			<div class="dropdown col-md-2">
-			<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> Diseases
-			<span class="caret"></span></button>
-			<ul class="dropdown-menu">
-				<li><a href="#">Disease1</a></li>
-				<li><a href="#">Disease2</a></li>
-				<li><a href="#">Disease3</a></li>
-			</ul>
+			
+			<div class="col-md-3">
+						<select class="form-control">
+						<option>   </option>
+						<option>Disease 1</option>
+						<option>Disease 2</option>
+						<option>Disease 3</option>
+						</select>
+						</div>
 			</div>
 			<div class="col-md-4"></div>
 		</div>
 		</form>
 		
-	<div class="row">
-		<div class="col-md-4"> </div>
-		<div class="col-md-2"><a href="#" class="previous">&#8249; Previous</a> </div>
-		<div class="col-md-2"><a href="#" class="next col-md-6">Next &#8250;</a></div>
-	</div>
+		<div class="row">
+            <div class="col-md-4"></div>
+			<div class="col-md-2"><button class="btn btn-primary target" type="submit">BACK</button></div>
+            <div class="col-md-2"><button class="btn btn-primary target" type="submit">NEXT</button></div><br><br><br>
+        </div>
 	</div>
 	</div>
 	</div>
