Fixed the issues in the file.
Changed the back and next buttons. Made the text stick to the center in mobile devices.

--- a/Register Start NEW-1.html
+++ b/Register Start NEW-1.html
@@ -64,15 +64,16 @@
 </head>
 <body>
 <div class="row">
-<div class="col-md-1"></div>
-<div class="col-md-10">
+<div class="col-md-1 col-xs-1"></div>
+<div class="col-md-10 col-xs-10 text-center" >
 	<h2>Register</h2>
 	<div class="row">	
-		<div class="col-md-5"></div>
-		<div class="col-md-2"><p>2/5</p></div>
-		<div class="col-md-5"></div>
-		<br>
-	</div>
+		<div class="col-md-5 "></div>
+		<div class="col-md-2 "><p>2/5</p></div>
+		<div class="col-md-5 "></div>
+		<br><br>
+		</div>
+	
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4"><p> Who do you want to nominate or register? </p></div>
@@ -80,25 +81,26 @@
 		<br>
 	</div>
 	<div class="row">
-		<div class="col-md-5"></div>
-		<div class="col-md-2"><label><input type="radio" name="Nomination"> Myself </label> <i class="fa fa-info-circle"></i></div>
-		<div class="col-md-5"></div>
+		<div class="col-md-5 "></div>
+		<div class="col-md-2 "><label><input type="radio" name="Nomination"> Myself </label> <i class="fa fa-info-circle"></i></div>
+		<div class="col-md-5 "></div>
 	</div>
 	<div class="row">
-		<div class="col-md-5"></div>
-		<div class="col-md-2"><label><input type="radio" name="Nomination"> My Child </label> <i class="fa fa-info-circle"></i></div>
-		<div class="col-md-5"></div>
+		<div class="col-md-5 "></div>
+		<div class="col-md-2 "><label><input type="radio" name="Nomination"> My Child </label> <i class="fa fa-info-circle"></i></div>
+		<div class="col-md-5 "></div>
 	</div>
 	<div class="row">
-		<div class="col-md-5"></div>
-		<div class="col-md-2"><label><input type="radio" name="Nomination"> Someone else </label> <i class="fa fa-info-circle"></i></div>
-		<div class="col-md-5"></div>
+		<div class="col-md-5 "></div>
+		<div class="col-md-2 "><label><input type="radio" name="Nomination"> Someone else </label> <i class="fa fa-info-circle"></i></div>
+		<div class="col-md-5 "></div>
 	</div>
 	<div class="row">
-		<div class="col-md-4"> </div>
-		<div class="col-md-2"><a href="#" class="previous">&#8249; Previous</a> </div>
-		<div class="col-md-2"><a href="#" class="next col-md-6">Next &#8250;</a></div>
-	</div>
+        <div class="col-md-4 "></div>
+		<div class="col-md-2 "><button class="btn btn-primary target" type="submit">BACK</button></div>
+        <div class="col-md-2 "><button class="btn btn-primary target" type="submit">NEXT</button></div><br><br><br>
+    </div>
+	
 </div>
 </body>
 </div>
